working on bitmap replacer

--- a/src/eepe.qrc
+++ b/src/eepe.qrc
@@ -34,5 +34,6 @@
         <file>icon.png</file>
         <file>images/load_model.png</file>
         <file>images/save_model.png</file>
+        <file>images/c_home.png</file>
     </qresource>
 </RCC>
