--- a/src/modeledit.ui
+++ b/src/modeledit.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>715</width>
-    <height>566</height>
+    <width>780</width>
+    <height>691</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -303,6 +303,11 @@
            <string>DSM2</string>
           </property>
          </item>
+         <item>
+          <property name="text">
+           <string>PPM16</string>
+          </property>
+         </item>
         </widget>
        </item>
        <item row="13" column="0">
@@ -386,31 +391,83 @@
          </property>
         </widget>
        </item>
-       <item row="15" column="0">
+       <item row="17" column="0">
         <widget class="QLabel" name="label_114">
          <property name="text">
           <string>Trainer</string>
          </property>
         </widget>
        </item>
-       <item row="16" column="0">
+       <item row="18" column="0">
         <widget class="QLabel" name="label_115">
          <property name="text">
           <string>T2throttleTrig</string>
          </property>
         </widget>
        </item>
-       <item row="15" column="1">
+       <item row="17" column="1">
         <widget class="QCheckBox" name="TrainerChkB">
          <property name="text">
           <string/>
          </property>
         </widget>
        </item>
-       <item row="16" column="1">
+       <item row="18" column="1">
         <widget class="QCheckBox" name="T2ThrTrgChkB">
          <property name="text">
           <string/>
+         </property>
+        </widget>
+       </item>
+       <item row="15" column="0">
+        <widget class="QLabel" name="label_116">
+         <property name="text">
+          <string>DSM Type</string>
+         </property>
+        </widget>
+       </item>
+       <item row="16" column="0">
+        <widget class="QLabel" name="label_117">
+         <property name="text">
+          <string>PXX RxNum</string>
+         </property>
+        </widget>
+       </item>
+       <item row="15" column="1">
+        <widget class="QComboBox" name="DSM_Type">
+         <item>
+          <property name="text">
+           <string>LP4/LP5</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>DSM2only</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>DSM2/DSMX</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+       <item row="16" column="1">
+        <widget class="QSpinBox" name="pxxRxNum">
+         <property name="suffix">
+          <string/>
+         </property>
+         <property name="minimum">
+          <number>1</number>
+         </property>
+         <property name="maximum">
+          <number>125</number>
+         </property>
+         <property name="singleStep">
+          <number>1</number>
+         </property>
+         <property name="value">
+          <number>1</number>
          </property>
         </widget>
        </item>
@@ -3062,7 +3119,7 @@ Right</string>
       <attribute name="title">
        <string>Curves</string>
       </attribute>
-+     <layout class="QGridLayout" name="gridLayout_7" columnstretch="0,0,0,0,0,0,0,0,0,0,0,0">
+      <layout class="QGridLayout" name="gridLayout_7" columnstretch="0,0,0,0,0,0,0,0,0,0,0,0">
        <item row="0" column="0">
         <widget class="QPushButton" name="curveEdit_1">
          <property name="text">
